--- a/CSManagement/CSManagement/Views/Generations/Edit.cshtml
+++ b/CSManagement/CSManagement/Views/Generations/Edit.cshtml
@@ -75,12 +75,8 @@
                 <div class="row">
                     <div class="form-group col-md-4">
                         @Html.LabelFor(model => model.Gen_Date, htmlAttributes: new { @class = "control-label" })
-                        <div class="input-group">
-                            <div class="input-group-addon">
-                                <i class="fa fa-calendar"></i>
-                            </div>
-                            <input type="text" id="gendate" name="gendate" class="form-control" data-inputmask="'alias': 'dd-mm-yyyy'" data-mask>
-                        </div>
+                        @Html.EditorFor(model => model.Gen_Date, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Gen_Date, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group col-md-4">
