--- a/CSManagement/CSManagement/Views/Generations/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Generations/IndexUser.cshtml
@@ -16,7 +16,7 @@
             margin-left: auto;
             padding-left: 30px;
             padding-right: 30px;
-            background-color:white;
+            background-color: white;
         }
 
         .outer {
@@ -40,13 +40,30 @@
     </style>
 </head>
 
+@if (ViewBag.Message != null)
+{
+    <script type="text/javascript">
+
+        window.onload = function () {
+            alert("@ViewBag.Message");
+        };
+    </script>
+}
+
 <body>
     <section class="contentpage">
         <div class="row">
             <div class="col-md-12">
                 <header class="header1">
-                    <h1 class="page-title">หลักสูตรอบรมระยะสั้น</h1>
+                    <h1 class="box-title">หลักสูตรอบรม</h1>
                 </header>
+                <br />
+                <div class="col-md-12">
+                    <div style="float:right">
+                        <a class="btn btn-success" href="@Url.Action("Registers", "Generations")">กรอกข้อมูลส่วนตัว</a>
+                    </div>
+                </div>
+                <br />
                 <br />
                 <div class="row">
                     <table id="example1" class="table table-bordered table-striped" style="width:100%">
@@ -59,7 +76,7 @@
                                 <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Year)</th>
                                 <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Fee)</th>
                                 <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Status1.Gen_Name)</th>
-                                <th style="text-align:center">จัดการข้อมูล</th>
+                                <th style="text-align:center">สมัครเรียน</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -67,16 +84,16 @@
                             {
                                 <tr>
                                     <td style="text-align:center">@(i++)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Short_Course.SC_NameTH)</td>
-                                    <td style="text-align:center">@Html.DisplayFor(modelItem => item.Gen_Name)</td>
-                                    <td style="text-align:center">@Html.DisplayFor(modelItem => item.Gen_Member)</td>
-                                    <td style="text-align:center">@Html.DisplayFor(modelItem => item.Gen_Year)</td>
-                                    <td style="text-align:right;color:forestgreen"><strong>@Html.DisplayFor(modelItem => item.Gen_Fee)-.</strong></td>
+                                    <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@item.Short_Course.SC_NameTH</td>
+                                    <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@item.Gen_Name</td>
+                                    <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@Html.DisplayFor(modelItem => item.Gen_Member)</td>
+                                    <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@Html.DisplayFor(modelItem => item.Gen_Year)</td>
+                                    <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })" style="text-align:right;color:forestgreen"><strong>@Html.DisplayFor(modelItem => item.Gen_Fee)-.</strong></td>
                                     <td style="color:@(item.Gen_Status1.Gen_Name == "เปิดรับสมัคร"?"forestgreen":"red")">@Html.DisplayFor(modelItem => item.Gen_Status1.Gen_Name)</td>
                                     <td style="text-align:center">
                                         <button type="button" class="btn btn-success btn-sm  modal-link"
                                                 data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">
-                                            รายละเอียด
+                                            สมัคร
                                         </button>
                                         @*<button class="btn btn-info" type="button" data-toggle="modal" data-target="#myModal"><i class="fa fa-list-ul"></i> รายละเอียด</button>*@
                                     </td>
@@ -120,10 +137,12 @@
         $(document).ready(function () {
             $('#example1').DataTable({
                 scrollCollapse: true,
+                "paging": false,
                 autoWidth: false,
                 responsive: true,
                 language: {
-                    url: "//cdn.datatables.net/plug-ins/1.10.19/i18n/Thai.json"
+                    url: "//cdn.datatables.net/plug-ins/1.10.19/i18n/Thai.json",
+                    searchPlaceholder: "ค้นหาข้อมูล"
                 },
                 columnDefs: [{
                     targets: "datatable-nosort",
