--- a/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
@@ -50,7 +50,7 @@
                                 i++;
                                 var active = i == 1 ? "active" : "";
                                 <div class="item @active">
-                                    <img src="~/imgSlideShow/@item.Pic_Img" style="width:100%;height:50%" />
+                                    <img src="~/imgSlideShow/@item.Pic_Img" style="width:100%; height: 100%;max-height: 600px" />
                                 </div>
                             }
                         </div>
@@ -90,7 +90,7 @@
         <div class="card-body">
             <div class="row">
                 <div class="col-12 col-lg-3 col-md-3 col-sm-6">
-                    <a style="cursor:pointer;" onclick="window.location.href = '@Url.Action("IndexUser", "Students" )'"><img src="~/img/logo1.png" class="card-img-top"></a>
+                    <a style="cursor:pointer;" onclick="window.location.href = '@Url.Action("IndexUser", "Projects" )'"><img src="~/img/logo1.png" class="card-img-top"></a>
                 </div>
 
                 <div class="col-12 col-lg-3 col-md-3 col-sm-6">
@@ -153,21 +153,11 @@
                         <div class="box box-widget widget-user-2">
                             <div class="widget-user-header bg-yellow" style="height: 100%; padding: 10px">
                                 <div class="widget-user-image">
-                                    <img class="img-circle" style="height: 80px" img src="~/img/@item.Stu_Img" />
+                                    <img class="img-circle" style="height: 80px " img src="~/img/@item.Stu_Img" />
                                 </div>
                                 <h3 class="widget-user-username" style="letter-spacing: 0px">@item.Stu_Name @item.Stu_Surname</h3>
                                 <h4 class="widget-user-username" style="letter-spacing: 0px">@item.Pj_StuID</h4>
                                 <h5 class="widget-user-desc" style="font-size:80%">@item.Pj_NameTH</h5>
-                                <div style="text-align: center;">
-                                    @for (int j = 0; j < @item.Pj_Rate; j++)
-                                    {
-                                        <span style="text-align: center" class="glyphicon glyphicon-star"></span>
-                                    }
-                                    @for (int j = @item.Pj_Rate; j < 5; j++)
-                                    {
-                                        <span style="text-align: center" class="glyphicon glyphicon-star-empty"></span>
-                                    }
-                                </div>
                             </div>
                             <div class="box-footer no-padding">
                                 <ul class="nav nav-stacked">
@@ -220,61 +210,25 @@
             <br />
             <div class="row">
                 <div class="row">
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail">
-                            <img src="~/img/programmer.png" style="width: 100%; height: 50%" /><br />
-                            <strong><p style="text-align:center;font-size:20px">พัฒนาการเขียนโปรแกรม</p></strong>
-                            <p style="padding:1em">พัฒนาการเขียนโปรแกรมทั้งแบบ OOP และ Structure เช่น C#, Python</p>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail">
-                            <img src="~/img/app.png" style="width: 100%; height: 50%" /><br />
-                            <strong><p style="text-align:center;font-size:20px">พัฒนาแอพพลิเคชั่น</p></strong>
-                            <p style="padding:1em">พัฒนาแอพพลิชั่นด้วย Cross platform เช่น Xamarin, Ionic, React</p>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail">
-                            <img src="~/img/webApp.png" style="width: 100%; height: 50%" /><br />
-                            <strong><p style="text-align:center;font-size:20px">พัฒนาเว็บแอพพลิเคชั่น</p></strong>
-                            <p style="padding:1em">พัฒนาเว็บแอพพลิเคชั่นที่ทำงานได้จริง เช่น Asp.Net MVC, PHP, Angular, React JS, Javascript</p>
-                        </div>
+                    @{
+                        foreach (var item in ViewBag.SyllabusCount)
+                        {
+                            <div class="col-sm-6 col-md-4">
+                                <div class="thumbnail">
+                                    <img src="~/img/@item.Sy_Img" style="width: 100%; height: 50%" /><br />
+                                    <strong>
+                                        <p style="text-align: center; font-size: 20px">@item.Sy_Name</p>
+                                    </strong>
+                                    <p style="padding: 1em">@item.Sy_Details</p>
+                                </div>
+                            </div>
+                        }
+                    }
                     </div>
                 </div>
-            </div>
 
-            <div class="row">
-                <div class="row">
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail">
-                            <img src="~/img/GameDev.jpg" style="width: 100%; height: 50%" /><br />
-                            <strong><p style="text-align:center;font-size:20px">การพัฒนาออกแบบเกม</p></strong>
-                            <p style="padding:1em">ฝึกปฏิบัติการพัฒนาเกมส์ด้วยโปรแกรม Unity สร้างเกมส์แบบ 3 มิติ เขียนควบคุมคำสั่งด้วย ภาษา C#</p>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail">
-                            <img src="~/img/graphic.png" style="width: 100%; height: 50%" /><br />
-                            <strong><p style="text-align:center;font-size:20px">การออกแบบกราฟิกดีไซน์</p></strong>
-                            <p style="padding:1em">ฝึกปฏิบัติการออกแบบงานกราฟฟิก เช่น Illustrator, Photoshop , ฯลฯ</p>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail">
-                            <img src="~/img/Network.jpg" style="width: 100%; height: 50%" /><br />
-                            <strong><p style="text-align:center;font-size:20px">การพัฒนาออกแบบเครือข่าย</p></strong>
-                            <p style="padding:1em">การจัดการระบบเครือข่าย เช่น การติดตั้งเครื่องเซิร์ฟเวอร์ การจัดการระบบอินเทอร์เน็ต</p>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
-    </div>
 </section>
 
 
