--- a/CSManagement/CSManagement/Views/Projects/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Projects/IndexUser.cshtml
@@ -60,16 +60,6 @@
                                     <h3 class="widget-user-username" style="letter-spacing: 0px">@item.Stu_Name @item.Stu_Surname</h3>
                                     <h4 class="widget-user-username" style="letter-spacing: 0px">@item.Pj_StuID</h4>
                                     <h5 class="widget-user-desc" style="font-size:80%">@item.Pj_NameTH</h5>
-                                    <div style="text-align: center;">
-                                        @for (int i = 0; i < @item.Pj_Rate; i++)
-                                        {
-                                            <span style="text-align: center" class="glyphicon glyphicon-star"></span>
-                                        }
-                                        @for (int i = @item.Pj_Rate; i < 5; i++)
-                                        {
-                                            <span style="text-align: center" class="glyphicon glyphicon-star-empty"></span>
-                                        }
-                                    </div>
                                 </div>
                                 <div class="box-footer no-padding">
                                     <ul class="nav nav-stacked">
@@ -81,7 +71,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="btn_4 video-btn" alt="video" data-toggle="modal" data-src="https://www.facebook.com/plugins/video.php?href=@item.Pj_Video" data-target="#myModal">
+                                            <a class="btn_4 video-btn" alt="video" data-toggle="modal" data-src="https://www.facebook.com/plugins/video.php?href=https://web.facebook.com/kru.cs/videos/@item.Pj_Video/" data-target="#myModal">
                                                 วิดีโอ
                                                 <span class="pull-right badge bg-green">เข้าชม</span>
                                             </a>
