--- a/CSManagement/CSManagement/Views/Home/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Home/Index.cshtml
@@ -88,7 +88,7 @@
         <div class="col-md-6">
             <div class="box box-danger">
                 <div class="box-header with-border set-text">
-                    <h3 class="box-title">สัดส่วนการเข้าทำงานของศิษย์เก่า</h3>
+                    <h3 class="box-title">สัดส่วนการทำงานของศิษย์เก่า</h3>
 
                     <div class="box-tools pull-right">
                         <button type="button" class="btn btn-box-tool" data-widget="collapse">
