--- a/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
@@ -124,7 +124,7 @@
                 <div class="col-md-6">
                     <div class="panel panel-default outer" style="width:95%">
                         <div class="panel-heading headerbar">
-                            สัดส่วนการเข้าทำงานของศิษย์เก่า
+                            สัดส่วนการทำงานของศิษย์เก่า
                         </div>
                         <div class="panel-body text-justify chart-responsive">
                             <div class="chart" id="chartContainer2" style="height: 300px; position: relative;"></div>
