--- a/CSManagement/CSManagement/Views/Generations/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Generations/IndexUser.cshtml
@@ -6,7 +6,6 @@
     int i = 1;
 }
 
-@**@
 <head>
     <style>
         .contentpage {
@@ -49,63 +48,59 @@
         };
     </script>
 }
-
 <body>
     <section class="contentpage">
-        <div class="row">
-            <div class="col-md-12">
-                <header class="header1">
-                    <h1 class="box-title">หลักสูตรอบรม</h1>
-                </header>
-                <br />
-                <div class="col-md-12">
-                    <div style="float:right">
-                        <a class="btn btn-success" href="@Url.Action("Registers", "Generations")">กรอกข้อมูลส่วนตัว</a>
-                    </div>
-                </div>
-                <br />
-                <br />
-                <div class="row">
-                    <table id="example1" class="table table-bordered table-striped" style="width:100%">
-                        <thead>
-                            <tr>
-                                <th style="text-align:center">ที่</th>
-                                <th style="text-align:center">@Html.DisplayNameFor(model => model.Short_Course.SC_NameTH)</th>
-                                <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Name)</th>
-                                <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Member)</th>
-                                <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Year)</th>
-                                <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Fee)</th>
-                                <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Status1.Gen_Name)</th>
-                                <th style="text-align:center">สมัครเรียน</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var item in Model)
-                            {
-                                <tr>
-                                    <td style="text-align:center">@(i++)</td>
-                                    <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@item.Short_Course.SC_NameTH</td>
-                                    <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@item.Gen_Name</td>
-                                    <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@Html.DisplayFor(modelItem => item.Gen_Member)</td>
-                                    <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@Html.DisplayFor(modelItem => item.Gen_Year)</td>
-                                    <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })" style="text-align:right;color:forestgreen"><strong>@Html.DisplayFor(modelItem => item.Gen_Fee)-.</strong></td>
-                                    <td style="color:@(item.Gen_Status1.Gen_Name == "เปิดรับสมัคร"?"forestgreen":"red")">@Html.DisplayFor(modelItem => item.Gen_Status1.Gen_Name)</td>
-                                    <td style="text-align:center">
-                                        <button type="button" class="btn btn-success btn-sm  modal-link"
-                                                data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">
-                                            สมัคร
-                                        </button>
-                                        @*<button class="btn btn-info" type="button" data-toggle="modal" data-target="#myModal"><i class="fa fa-list-ul"></i> รายละเอียด</button>*@
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-                </div>
+        <header class="header1">
+            <h1 class="page-title">หลักสูตรอบรม</h1>
+        </header>
+        <br />
+        @*<div class="col-md-12">
+            <div style="float:right">
+                <a class="btn btn-success" href="@Url.Action("Registers", "Generations")">กรอกข้อมูลส่วนตัว</a>
             </div>
+        </div>
+        <br />
+        <br />*@
+        <div class="row">
+            <table id="example1" class="table table-bordered table-striped" style="width:100%">
+                <thead>
+                    <tr>
+                        <th style="text-align:center">ที่</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Short_Course.SC_NameTH)</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Name)</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Member)</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Year)</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Fee)</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Status1.Gen_Name)</th>
+                        <th style="text-align:center">สมัครเรียน</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td style="text-align:center">@(i++)</td>
+                            <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@item.Short_Course.SC_NameTH</td>
+                            <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@item.Gen_Name</td>
+                            <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@Html.DisplayFor(modelItem => item.Gen_Member)</td>
+                            <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@Html.DisplayFor(modelItem => item.Gen_Year)</td>
+                            <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })" style="text-align:right;color:forestgreen"><strong>@Html.DisplayFor(modelItem => item.Gen_Fee)-.</strong></td>
+                            <td style="color:@(item.Gen_Status1.Gen_Name == "เปิดรับสมัคร"?"forestgreen":"red")">@Html.DisplayFor(modelItem => item.Gen_Status1.Gen_Name)</td>
+                            <td style="text-align:center">
+                                <button type="button" class="btn btn-success btn-sm  modal-link"
+                                        data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">
+                                    สมัคร
+                                </button>
+                                @*<button class="btn btn-info" type="button" data-toggle="modal" data-target="#myModal"><i class="fa fa-list-ul"></i> รายละเอียด</button>*@
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
         </div>
     </section>
 </body>
+
 <link href="~/Content/DataTables/css/dataTables.bootstrap.min.css" rel="stylesheet" />
 <link href="~/Content/DataTables/css/responsive.bootstrap.min.css" rel="stylesheet" />
 @section Scripts{
