--- a/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
@@ -29,6 +29,20 @@
         padding-bottom: 15px;
         background-color: #207016;
     }
+
+    .card {
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        width: 100%;
+    }
+
+        .card:hover {
+            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+        }
+
+    .container {
+        padding: 2px 16px;
+    }
 </style>
 
 <section class="banner full">
@@ -202,33 +216,89 @@
         </div>
 
         @*แนะนำว่าเรียนอะไรบ้าง*@
-        <div class="container">
-            @*<div class="panel panel-default outer" style="padding: 1em 5em;">*@
-            <header class="header1">
-                <h1 class="page-title">สาขาเราเรียนอะไรกัน</h1>
-            </header>
-            <br />
-            <div class="row">
-                <div class="row">
-                    @{
-                        foreach (var item in ViewBag.SyllabusCount)
-                        {
-                            <div class="col-sm-6 col-md-4">
-                                <div class="thumbnail">
-                                    <img src="~/img/@item.Sy_Img" style="width: 100%; height: 50%" /><br />
-                                    <strong>
-                                        <p style="text-align: center; font-size: 20px">@item.Sy_Name</p>
-                                    </strong>
-                                    <p style="padding: 1em">@item.Sy_Details</p>
-                                </div>
-                            </div>
-                        }
-                    }
+    <div class="container">
+        @*<div class="panel panel-default outer" style="padding: 1em 5em;">*@
+        <header class="header1">
+            <h1 class="page-title">สาขาเราเรียนอะไรกัน</h1>
+        </header>
+        <br />
+
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="~/img/programmer.png" alt="Avatar" style="width:100%">
+                    <div class="card-body" style="margin:15px;margin-bottom:15px">
+                        <h4 style="letter-spacing: 0px;"><b>พัฒนาการเขียนโปรแกรม</b></h4>
+                        <p>พัฒนาการเขียนโปรแกรมทั้งแบบ OOP และ Structure เช่น C#, Python</p>
                     </div>
                 </div>
+            </div>
 
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="~/img/app.png" alt="Avatar" style="width:100%">
+                    <div class="card-body" style="margin:15px">
+                        <h4 style="letter-spacing: 0px;"><b>พัฒนาแอพพลิเคชั่น</b></h4>
+                        <p>พัฒนาแอพพลิชั่นด้วย Cross platform เช่น Xamarin, Ionic, React</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="~/img/webApp.png" alt="Avatar" style="width:100%">
+                    <div class="card-body" style="margin:15px">
+                        <h4 style="letter-spacing: 0px;"><b>พัฒนาเว็บแอพพลิเคชั่น</b></h4>
+                        <p>พัฒนาเว็บแอพพลิเคชั่นที่ทำงานได้จริง เช่น Asp.Net MVC, PHP, Angular, React JS, Javascript</p>
+                    </div>
+                </div>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="~/img/Network.jpg" alt="Avatar" style="width:100%">
+                    <div class="card-body" style="margin:15px">
+                        <h4 style="letter-spacing: 0px;"><b>การพัฒนาออกแบบเครือข่าย</b></h4>
+                        <p>การจัดการระบบเครือข่าย เช่น การติดตั้งเครื่องเซิร์ฟเวอร์ การจัดการระบบอินเทอร์เน็ต</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="~/img/graphic.png" alt="Avatar" style="width:100%">
+                    <div class="card-body" style="margin:15px">
+                        <h4 style="letter-spacing: 0px;"><b>การออกแบบกราฟิกดีไซน์</b></h4>
+                        <p>ฝึกปฏิบัติการออกแบบงานกราฟฟิก เช่น Illustrator, Photoshop , ฯลฯ</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="~/img/ComputerAssembly.png" alt="Avatar" style="width:100%">
+                    <div class="card-body" style="margin:15px">
+                        <h4 style="letter-spacing: 0px;"><b>การซ่อมคอมพิวเตอร์</b></h4>
+                        <p>ศึกษาสถาปัตยกรรมและซ่อมคอมพิวเตอร์ สำหรับรองรับงานด้าน It Support</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="~/img/GameDev.jpg" alt="Avatar" style="width:100%">
+                    <div class="card-body" style="margin:15px">
+                        <h4 style="letter-spacing: 0px;"><b>การพัฒนาออกแบบเกม</b></h4>
+                        <p>ฝึกปฏิบัติการพัฒนาเกมส์ด้วย Unity , C#</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
 
