--- a/CSManagement/CSManagement/Views/ComputerEquipments/Index.cshtml
+++ b/CSManagement/CSManagement/Views/ComputerEquipments/Index.cshtml
@@ -10,7 +10,7 @@
     <div class="box-header">
         <div class="row">
             <div class="col-md-12 col-sm-12">
-                <h1 class="box-title">จัดการข้อมูลครุภัณฑ์</h1>
+                <h1 class="box-title" style="font-family: 'Kanit', sans-serif">จัดการข้อมูลครุภัณฑ์</h1>
                 <div style="float:right">
                     <a class="btn btn-warning" href="@Url.Action("Index", "Disposes")"><i class="fa fa-cube"></i> ดูข้อมูลการจำหน่ายครุภัณฑ์</a>
                     <a class="btn btn-success" href="@Url.Action("Create", "ComputerEquipments")"><i class="fa fa-plus"></i> เพิ่มข้อมูลครุภัณฑ์</a>
