--- a/CSManagement/CSManagement/Views/Courses/Details.cshtml
+++ b/CSManagement/CSManagement/Views/Courses/Details.cshtml
@@ -9,7 +9,7 @@
         <div class="box-header with-border">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="box-title">รายละเอียดข้อมูลหลักสูตร</h1>
+                    <h1 class="box-title" style="font-family: 'Kanit', sans-serif">รายละเอียดข้อมูลหลักสูตร</h1>
 
                     <div style="float:right">
                         <div class="delete-section">
