--- a/CSManagement/CSManagement/Views/Teachers/Details.cshtml
+++ b/CSManagement/CSManagement/Views/Teachers/Details.cshtml
@@ -10,7 +10,7 @@
         <div class="box-header with-border">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="box-title">รายละเอียดข้อมูลอาจารย์</h1>
+                    <h1 class="box-title" style="font-family: 'Kanit', sans-serif">รายละเอียดข้อมูลอาจารย์</h1>
                     <div style="float:right">
                         <a class="btn btn-default" href="@Url.Action("Index", "Teachers")"><i class="fa  fa-mail-reply"></i> ย้อนกลับ</a>
                         <a class="btn btn-warning" href="@Url.Action("Edit", "Teachers", new { id = Model.Tea_ID })"><i class="fa fa-edit"></i>แก้ไขข้อมูล</a>
