--- a/CSManagement/CSManagement/Views/ComputerEquipments/Details.cshtml
+++ b/CSManagement/CSManagement/Views/ComputerEquipments/Details.cshtml
@@ -9,7 +9,7 @@
         <div class="box-header with-border">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="box-title">รายละเอียดข้อมูลครุภัณฑ์</h1>
+                    <h1 class="box-title" style="font-family: 'Kanit', sans-serif">รายละเอียดข้อมูลครุภัณฑ์</h1>
                     <div style="float: right">
                         <td>
                             @* 1 = อยู่ในระบบ / 2 = จำหน่ายแล้ว / 3 = รอดำเนินการ *@
