--- a/CSManagement/CSManagement/Views/Departments/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Departments/Index.cshtml
@@ -10,7 +10,7 @@
     <div class="box-header">
         <div class="row">
             <div class="col-md-12 col-sm-12">
-                <h1 class="box-title">จัดการข้อมูลหมวดหมู่วิชา</h1>
+                <h1 class="box-title" style="font-family: 'Kanit', sans-serif">จัดการข้อมูลหมวดหมู่วิชา</h1>
                 <a class="btn btn-success" style="float: right" href="@Url.Action("Create", "Departments")"><i class="fa fa-plus"></i>เพิ่มหมวดวิชา</a>
             </div>
         </div>
