--- a/CSManagement/CSManagement/Views/Disposes/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Disposes/Index.cshtml
@@ -8,7 +8,7 @@
 <section class="content">
     <div class="box box-default">
         <div class="box-header with-border">
-            <h1 class="box-title">การจำหน่ายครุภัณฑ์</h1>
+            <h1 class="box-title" style="font-family: 'Kanit', sans-serif">การจำหน่ายครุภัณฑ์</h1>
             <div style="float: right">
                 <a class="btn btn-default" href="@Url.Action("Index", "ComputerEquipments")"><i class="fa fa-mail-reply "></i> ย้อนกลับ</a>
             </div>
