--- a/CSManagement/CSManagement/Views/Generations/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Generations/Index.cshtml
@@ -11,7 +11,7 @@
         <div class="box-header with-border">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="box-title">จัดการข้อมูลรุ่นหลักสูตรอบรม</h1>
+                    <h1 class="box-title" style="font-family: 'Kanit', sans-serif">จัดการข้อมูลรุ่นหลักสูตรอบรม</h1>
                     <div style="float:right">
                         <a class="btn btn-success" href="@Url.Action("Create", "Generations")"><i class="fa fa-plus"></i> เพิ่มข้อมูลหลักสูตร</a>
                     </div>
