--- a/CSManagement/CSManagement/Views/Histories/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Histories/Index.cshtml
@@ -10,7 +10,7 @@
         <div class="box-header with-border">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="box-title">จัดการข้อมูลการทำงานศิษย์เก่า</h1>
+                    <h1 class="box-title" style="font-family: 'Kanit', sans-serif">จัดการข้อมูลการทำงานศิษย์เก่า</h1>
                     <div style="float:right">
                         <a class="btn btn-success" href="@Url.Action("Create", "Histories")"><i class="fa fa-plus"></i> เพิ่มข้อมูลการทำงาน</a>
                     </div>
