--- a/CSManagement/CSManagement/Views/Pictures/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Pictures/Index.cshtml
@@ -12,7 +12,7 @@
         <div class="box-header with-border">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="box-title">จัดการรูปภาพประชาสัมพันธ์</h1>
+                    <h1 class="box-title" style="font-family: 'Kanit', sans-serif">จัดการรูปภาพประชาสัมพันธ์</h1>
                     <div style="float:right">
                         <input class="btn btn-default" type="button" value="สมัครเรียน" onclick="window.location.href = '@Url.Action("GoRegister", "Pictures" )'" />
                         <a class="btn btn-success" href="@Url.Action("Create", "Pictures")"><i class="fa fa-plus"></i> เพิ่มรูปภาพ</a>
