--- a/CSManagement/CSManagement/Views/Projects/Details.cshtml
+++ b/CSManagement/CSManagement/Views/Projects/Details.cshtml
@@ -10,9 +10,9 @@
         <div class="box-header with-border">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="box-title">รายละเอียดข้อมูลปริญญานิพนธ์</h1>
+                    <h1 class="box-title" style="font-family: 'Kanit', sans-serif">รายละเอียดข้อมูลปริญญานิพนธ์</h1>
                     <div style="float:right">
-                        <a class="btn btn-default" href="@Url.Action("Index", "Projects")"><i class="fa fa-mail-reply"></i> ย้อยกลับ</a>
+                        <a class="btn btn-default" href="@Url.Action("Index", "Projects")"><i class="fa fa-mail-reply"></i> ย้อนกลับ</a>
                         @if (Session["UserID"].ToString() == @Model.Pj_StuID)
                         {
                             <a class="btn btn-warning" href="@Url.Action("Edit", "Projects", new { id = Model.Pj_ID })"><i class="fa fa-edit"></i>แก้ไขข้อมูล</a>
