--- a/CSManagement/CSManagement/Views/Projects/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Projects/Index.cshtml
@@ -10,7 +10,7 @@
         <div class="box-header with-border">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="box-title">จัดการข้อมูลปริญญานิพนธ์</h1>
+                    <h1 class="box-title" style="font-family: 'Kanit', sans-serif">จัดการข้อมูลปริญญานิพนธ์</h1>
                     <div style="float:right">
                         <a class="btn btn-success" href="@Url.Action("Create", "Projects")"><i class="fa fa-plus"></i>เพิ่มผลงานปริญญานิพนธ์</a>
                     </div>
