--- a/CSManagement/CSManagement/Views/Register_SC/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Register_SC/Index.cshtml
@@ -11,7 +11,7 @@
         <div class="box-header with-border">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="box-title">จัดการข้อมูลการสมัครอบรม</h1>
+                    <h1 class="box-title" style="font-family: 'Kanit', sans-serif">จัดการข้อมูลการสมัครอบรม</h1>
                     @*<div style="float:right">
                         <a class="btn btn-success" href="@Url.Action("Create", "Register_SC")"><i class="fa fa-plus"></i> เพิ่มข้อมูลการสมัคร</a>
                     </div>*@
