--- a/CSManagement/CSManagement/Views/Students/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Students/Index.cshtml
@@ -8,7 +8,7 @@
     <div class="box-header">
         <div class="row">
             <div class="col-md-12 col-sm-12">
-                <h1 class="box-title">จัดการข้อมูลนักศึกษา</h1>
+                <h1 class="box-title" style="font-family: 'Kanit', sans-serif">จัดการข้อมูลนักศึกษา</h1>
                 <a class="btn btn-success" style="float: right" href="@Url.Action("Create", "Students")"><i class="fa fa-user-plus"></i>เพิ่มข้อมูลนักศึกษา</a>
             </div>
         </div>
