--- a/CSManagement/CSManagement/Views/Syllabus/Details.cshtml
+++ b/CSManagement/CSManagement/Views/Syllabus/Details.cshtml
@@ -9,7 +9,7 @@
         <div class="box-header with-border">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="box-title">รายละเอียดข้อมูลประชาสัมพันธ์</h1>
+                    <h1 class="box-title" style="font-family: 'Kanit', sans-serif">รายละเอียดข้อมูลประชาสัมพันธ์</h1>
 
                     <div class="delete-section">
                         <div style="float:right">
