--- a/CSManagement/CSManagement/Views/Syllabus/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Syllabus/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="box-header">
         <div class="row">
             <div class="col-md-12 col-sm-12">
-                <h1 class="box-title">จัดการข้อมูลประชาสัมพันธ์หลักสูตร</h1>
+                <h1 class="box-title" style="font-family: 'Kanit', sans-serif">จัดการข้อมูลประชาสัมพันธ์หลักสูตร</h1>
                 <a class="btn btn-success" style="float: right" href="@Url.Action("Create", "Syllabus")"><i class="fa fa-user-plus"></i>เพิ่มข้อมูลประชาสัมพันธ์</a>
             </div>
         </div>
