--- a/CSManagement/CSManagement/Views/Teachers/Create.cshtml
+++ b/CSManagement/CSManagement/Views/Teachers/Create.cshtml
@@ -11,7 +11,7 @@
     <section class="content">
         <div class="box box-default">
             <div class="box-header with-border">
-                <h3 class="box-title">เพิ่มข้อมูลอาจารย์</h3>
+                <h3 class="box-title" style="font-family: 'Kanit', sans-serif">เพิ่มข้อมูลอาจารย์</h3>
 
                 <div class="box-tools pull-right">
                     <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
