--- a/CSManagement/CSManagement/Views/Teachers/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Teachers/Index.cshtml
@@ -9,7 +9,7 @@
         <div class="box-header with-border">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="box-title">จัดการข้อมูลอาจารย์</h1>
+                    <h1 class="box-title" style="font-family: 'Kanit', sans-serif">จัดการข้อมูลอาจารย์</h1>
                     <a class="btn btn-success" style="float: right" href="@Url.Action("Create", "Teachers")"><i class="fa fa-user-plus"></i> เพิ่มข้อมูลอาจารย์</a>
                 </div>
             </div>
